--- a/scan/src/components/DropDown/DropDown.module.scss
+++ b/scan/src/components/DropDown/DropDown.module.scss
@@ -1,24 +1,49 @@
 @import "../../SCSS/variables";
-@import "../../SCSS/app";
+@import "../../SCSS/index";
+
+
 
 .wrapper {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
   margin-top: 5px;
+
+  .arrow {
+    cursor: pointer;
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #D9D9D9;
+    z-index: 100;
+    right: 10px;
+    transition: 200ms all;
+    &.open {
+      border-top: none;
+      border-bottom: 10px solid #D9D9D9;
+    }
+  }
+
+  input {
+    background: $white;
+    cursor: pointer;
+  }
   .button {
     width: 100%;
     box-shadow: none;
-    @extend %button;
-    padding: 10px;
+    display: inline-block;
+    position: relative;
   }
   .close {
-    display: flex;
+    width: 100%;
     justify-content: right;
-    background-color: $gray-light;
     div {
-      border: solid $black;
+
       border-width: 0 1px 1px 0;
       display: inline-block;
       margin-bottom: 5px;
@@ -33,31 +58,38 @@
     text-align: left;
   }
   ul {
-    top: 24px;
+    top: 50px;
     width: 100%;
     padding-left: 0;
     position: absolute;
-    box-shadow: $shadow;
-    border-radius: $radius;
+    border-radius: 5px;
+    border: 1px solid $grey;
     max-height: 150px;
     display: flex;
     flex-direction: column;
-    background-color: $gray-light;
     overflow-x: hidden;
-    @extend %scroll
+    z-index: 100;
     }
 
 
   li {
     width: inherit;
     list-style-type: none;
-    button {
+    .items {
       width: 100%;
       padding: 10px;
       text-align: left;
+      border-radius: 0px;
+      border: none;
+      border-bottom: 1px solid $grey;
+      margin: 0px;
+      z-index: 100;
       &:hover {
-        background-color: $gray-blue;
+        background: $grey;
       }
+    }
+    .lastItem {
+      border-bottom: none;
     }
   }
 }
