--- a/scan/src/pages/Authorization/Authorization.module.scss
+++ b/scan/src/pages/Authorization/Authorization.module.scss
@@ -2,27 +2,51 @@
 @import "../../SCSS/index";
 
 .wrapper {
-  margin: 70px 0px;
   @extend %flex-box;
   justify-content: space-between;
   .title {
     width: 60%;
+    @media screen and (max-width: $mobile){
+      width: 100%;
+    }
     h1 {
-      font-size: 40px;
-      margin-top: 0px;
+      @extend %title;
+      @media screen and (max-width: $mobile){
+        font-size: 22px;
+      }
     }
     img {
       margin-left: 130px;
+      @media screen and (max-width: $mobile){
+        margin-left: 0;
+      }
     }
   }
-  .authorization {
+  .authorizationDesc {
     width: 40%;
-    //margin-right: 100px;
-    position: relative;
-    img {
-      position: absolute;
+    @media screen and (max-width: $mobile){
+      display: none;
+    }
+    .locker {
       left: -40px;
       top: -40px;
+    }
+  }
+  .authorizationMob {
+    margin-top: 100px;
+    margin-bottom: 30px;
+    @media screen and (min-width: $mobile){
+      display: none;
+    }
+    .locker {
+      left: 120px;
+      top: -70px;
+    }
+  }
+  .authorizationDesc, .authorizationMob {
+    position: relative;
+    .locker {
+      position: absolute;
     }
   }
 }
